--- a/themes/default/student/search.html
+++ b/themes/default/student/search.html
@@ -208,13 +208,13 @@
                                 <thead class="thead-dark">
                                     <tr>
                                         <th width="1%" class="text-center" scope="col">ID</th>
-                                        <th width="10%" class="text-center" scope="col">Admission No</th>
+                                        <th width="10%" class="text-center" scope="col">Admission</th>
                                         <th width="1%" class="text-center" scope="col">Class</th>
                                         <th width="10%" class="text-center" scope="col">DoB</th>
                                         <th width="5%" class="text-center" scope="col">Gender</th>
                                         <th width="10%" class="text-center" scope="col">City</th>
                                         <th scope="col">Name</th>                                    
-                                        <th width="10%" class="text-center" scope="col">&nbsp;</th>
+                                        <th width="15%" class="text-center" scope="col">&nbsp;</th>
                                     </tr>
                                 </thead>
 
