exam result/search finished

--- a/themes/default/exam/search.html
+++ b/themes/default/exam/search.html
@@ -106,7 +106,7 @@
                 <section class="examschedule mt-3">
 
                     <table class="table table-hover table-bordered table-responsive-md">
-
+                        <caption> Results of Exam Schedules </caption>
                         <thead class="thead-dark">
                             {% if exam.schedules %}
                                 <tr>
