sport/add UI under development

--- a/themes/default/student/add.html
+++ b/themes/default/student/add.html
@@ -206,6 +206,7 @@
                                 </div>
     
                             </div>
+                            <!-- END : PERSONAL DETAILS -->
     
                             <!-- START : FIRST GUARDIAN DETAILS -->
                             <div class="card">
