--- a/themes/default/exam/create.html
+++ b/themes/default/exam/create.html
@@ -21,10 +21,9 @@
                     <div class="addexam">
 
                         <div class="d-flex align-middle" style="justify-content: space-between;margin-top: 1rem;">
-                            <h4 class="page-title mt-0"> Create an Exam </h4>
+                            <h4 class="page-title"> Create an Exam </h4>
 
-                            <div class="">
-                                <button type="button" class="btn btn-sm btn-warning ml-auto" data-toggle="modal" data-target="#edit-exam"> Edit / Remove exam </button>
+                            <div>
                                 <button type="button" class="btn btn-sm btn-warning ml-2" data-toggle="modal" data-target="#view-exam-type"> Edit / Remove exam type </button>
                                 <button type="button" class="btn btn-sm btn-secondary ml-2"  data-toggle="modal" data-target="#create-exam-type"> Add new exam type </button>
                             </div>
@@ -93,7 +92,12 @@
                     <!-- START : SCHEDULE EXAM -->
                     <div class="scheduleexam">
 
-                        <h4 class="page-title mt-5"> Schedule an exam </h4>
+                        <div class="d-flex align-middle" style="justify-content: space-between;margin-top: 1rem;">
+                            <h4 class="page-title mt-5"> Schedule an exam </h4>
+                            <div class="mt-5">
+                                <button type="button" class="btn btn-sm btn-warning ml-auto" data-toggle="modal" data-target="#edit-exam"> Edit / Remove exam </button>
+                            </div>
+                        </div>
 
                         <div class="card mt-4">
                             <div class="card-body">
