--- a/themes/default/sport/assign.html
+++ b/themes/default/sport/assign.html
@@ -10,9 +10,9 @@
             <div class="col-md-10 content">               
                 {{ template.topmenu|raw }}
 
-                <div class="sportsearch">
+                <div class="sportassign">
 
-                    <h4 class="page-title"> Sport Search </h4>
+                    <h4 class="page-title"> Assign Sport </h4>
 
                 </div>
             </div>
