Sport search finished

--- a/themes/default/sport/add_coach.html
+++ b/themes/default/sport/add_coach.html
@@ -52,6 +52,7 @@
                                                                 <option value="{{ sport.id }}">{{ sport.name }}</option>
                                                             {% endfor %}
                                                         </select>
+                                                        <small class="form-text text-muted">Multiple Sports can be selected</small>
                                                     </div>
                                                 </div>
 
