--- a/themes/default/result/search.html
+++ b/themes/default/result/search.html
@@ -117,7 +117,8 @@
                         <div class="examresult-table mt-4">
 
                             <table class="table table-hover table-responsive-md">
-                                
+                                <caption> Search Results of Exam Schedules </caption>
+                                {% if exam.schedules %}
                                 <thead class="thead-dark">
                                     <th width="1%" class="text-center" scope="col">ID</th>
                                     <th width="1%" class="text-center" scope="col">Admission</th>
@@ -129,7 +130,13 @@
                                     <th width="1%" class="text-center" scope="col">Marks</th>
                                     <th width="12%" class="text-center" scope="col">&nbsp;</th>
                                 </thead>
+                                {% else %}
+                                    <thead class="thead-dark">
+                                        <th class="text-center" scope="col">Please Select an Exam to view its Schedule</th>
+                                    </thead>
+                                {% endif %}
 
+                                {% if exam.schedules %}
                                 <tbody>
                                     {% for exam_schedule in exam.schedules %}
                                     <tr>
@@ -152,6 +159,11 @@
                                     </tr>
                                     {% endfor %}
                                 </tbody>
+                                {% else %}
+                                    <tbody>
+                                        <td class="text-center" scope="col">No records to display</td>
+                                    </tbody>
+                                {% endif %}
 
                             </table>
 
